<resources>
    <string name="top_bar_label">Icon Finder</string>

    <!-- Strings used in instruction_fragment.xml -->
    <string name="phase1_text">
        Herzlich willkommen zu meiner Studie! \n
        Es soll ermittelt werden, wie schnell Icons erkannt werden.
        \n\n
        Bitte stellen Sie sicher, dass Sie eine Internet-Verbindung haben, da sonst die
        Ergebnisse der Studie nicht gespeichert werden können. Bitte führen Sie außerdem die
        Studie nur einmal durch, um die Ergebnisse nicht zu verfälschen.
        \n\n
        Nachdem der START Button betätigt wurde, beginnt die erste Phase dieser Studie und Ihnen
        wird ein einzelnes buntes Icon für einige Sekunden lang angezeigt.
        Bitte merken Sie sich das gezeigte Icon. \n
        Anschließend wird eine Gruppe bestehend aus neun verschiedenen bunten Icons angezeigt.
        Ihre Aufgabe ist es, das zuvor gesehene Icon so schnell wie möglich zu finden
        und auszuwählen. \n
        Sobald Sie dies getan haben, wird Ihnen erneut ein einzelnes Icon angezeigt
        und der Ablauf wiederholt sich insgesamt neun Mal.
        \n\n
        Wenn Sie den Home-Button oder den Zurück-Button Ihres Gerätes betätigen, gelangen Sie
        zu diesem Bildschirm zurück und jeglicher Fortschritt wird gelöscht.
    </string>

    <string name="phase2_text">
        Nachdem der START Button betätigt wurde, beginnt die zweite Phase dieser Studie und Ihnen
        wird ein einzelnes schwarz-weißes Icon für einige Sekunden lang angezeigt.
        Bitte merken Sie sich das gezeigte Icon. \n\n
        Anschließend wird eine Gruppe bestehend aus neun verschiedenen schwarz-weiß Icons angezeigt.
        Ihre Aufgabe ist es, das zuvor gesehene Icon so schnell wie möglich zu finden
        und auszuwählen. \n\n
        Sobald Sie dies getan haben, wird Ihnen erneut ein einzelnes Icon angezeigt
        und der Ablauf wiederholt sich insgesamt neun Mal.
    </string>

    <string name="phase3_text">
        Nachdem der START Button betätigt wurde, beginnt die dritte Phase dieser Studie und Ihnen
        wird der Name eines Icons für einige Sekunden lang angezeigt.
        Bitte merken Sie sich das gezeigte Wort. \n\n
        Anschließend wird eine Gruppe bestehend aus neun verschiedenen bunten Icons angezeigt.
        Ihre Aufgabe ist es, das dem gezeigten Wort entsprechende Icon so schnell wie möglich zu
        finden und auszuwählen. \n\n
        Sobald Sie dies getan haben, wird Ihnen erneut ein einzelnes Icon angezeigt
        und der Ablauf wiederholt sich insgesamt neun Mal.
    </string>

    <string name="phase4_text">
        Nachdem der START Button betätigt wurde, beginnt die vierte und letzte Phase dieser Studie
        und Ihnen wird erneut der Name eines Icons für einige Sekunden lang angezeigt.
        Bitte merken Sie sich das gezeigte Wort. \n\n
        Anschließend wird eine Gruppe bestehend aus neun verschiedenen schwarz-weiß Icons angezeigt.
        Ihre Aufgabe ist es, das dem gezeigten Wort entsprechende Icon so schnell wie möglich zu
        finden und auszuwählen. \n\n
        Sobald Sie dies getan haben, wird Ihnen erneut ein einzelnes Icon angezeigt
        und der Ablauf wiederholt sich insgesamt neun Mal.
    </string>

    <string name="start">Start</string>

    <!-- Strings used in thank_you_fragment.xml -->
    <string name="thank_you_text">
        Vielen Dank für Ihre Teilnahme! \n
        Unterhalb können Sie sich entscheiden, ob Sie sich Ihre Ergebnisse anzeigen lassen möchten,
        Ihre Ergebnisse im Vergleich zu anderen Teilnehmern der Studie sehen möchten,
        oder zum Start der App zurückkehren möchten. \n
        Bitte führen Sie die Studie nicht erneut durch, um die Ergebnisse nicht zu verfälschen.
    </string>

    <string name="show_results">Ergebnisse anzeigen</string>
    <string name="show_statistics">Statistiken anzeigen</string>
    <string name="back_to_start">Zurück zum Start</string>

    <!-- Strings used in result_fragment.xml -->
    <string name="table_head_1">Icon</string>
    <string name="table_head_2">Phase 1</string>
    <string name="table_head_3">Phase 2</string>
    <string name="table_head_4">Phase 3</string>
    <string name="table_head_5">Phase 4</string>

    <!-- Strings used in statistics_fragment.xml -->

    <string name="statistics_general">
        Generelle Statistiken \n
        Insgesamt haben Sie durchschnittlich %1$.2f Sekunden benötigt,
        um ein Icon zu erkennen, wobei Sie %2$.2f Prozent der Icons richtig erkannt haben. \n
        Andere Teilnehmer haben durchschnittlich in %3$.2f Sekunden
        %4$.2f Prozent der Icons erkannt.
    </string>

    <string name="statistics_phase1">
        Phase 1 Statistiken \n
        In der ersten Phase der Studie haben Sie durchschnittlich %1$.2f Sekunden benötigt,
        um ein Icon zu erkennen, wobei Sie %2$.2f Prozent der Icons richtig erkannt haben. \n
        Andere Teilnehmer haben in der ersten Phase durchschnittlich in %3$.2f Sekunden
        %4$.2f Prozent der Icons richtig erkannt.
    </string>

    <string name="statistics_phase2">
        Phase 2 Statistiken \n
        In der zweiten Phase der Studie haben Sie durchschnittlich %1$.2f Sekunden benötigt,
        um ein Icon zu erkennen, wobei Sie %2$.2f Prozent der Icons richtig erkannt haben. \n
        Andere Teilnehmer haben in der zweiten Phase durchschnittlich in %3$.2f Sekunden
        %4$.2f Prozent der Icons richtig erkannt.
    </string>

    <string name="statistics_phase3">
        Phase 3 Statistiken \n
        In der dritten Phase der Studie haben Sie durchschnittlich %1$.2f Sekunden benötigt,
        um ein Icon zu erkennen, wobei Sie %2$.2f Prozent der Icons richtig erkannt haben. \n
        Andere Teilnehmer haben in der dritten Phase durchschnittlich in %3$.2f Sekunden
        %4$.2f Prozent der Icons richtig erkannt.
    </string>

    <string name="statistics_phase4">
        Phase 4 Statistiken \n
        In der vierten Phase der Studie haben Sie durchschnittlich %1$.2f Sekunden benötigt,
        um ein Icon zu erkennen, wobei Sie %2$.2f Prozent der Icons richtig erkannt haben. \n
        Andere Teilnehmer haben in der vierten Phase durchschnittlich in %3$.2f Sekunden
        %4$.2f Prozent der Icons richtig erkannt.
    </string>

    <string name="seconds">%1$.2f Sekunden</string>
    <string name="percent">%1$.2f Prozent</string>
    <string name="back">Zurück zum vorherigen Bildschirm</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="other_participants_statistics">Ergebnisse anderer Teilnehmer</string>
    <string name="user_statistics">Ihre Ergebnisse</string>
    <string name="phase">Phase</string>

</resources>