<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="statisticsFragment"
            type="de.tuchemnitz.iconfinder.StatisticsFragment" />

    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/statistics_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp">

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableHeadText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/phase" />

                <TextView
                    style="@style/IconFinder.TableHeadText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/user_statistics" />

                <TextView
                    style="@style/IconFinder.TableHeadText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/other_participants_statistics" />

            </TableRow>

            <View
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />


            <!-- Phase One -->

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/One" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[1].timeUser)}" />
                   <!-- statisticsViewModel.getPhaseOneStatistics().timeUser)}" />-->

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[1].timeAll)}" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[1].correctPercentageUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[1].correctPercentageAll)}" />
            </TableRow>

            <!-- Phase 2 -->

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/Two" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[2].timeUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[2].timeAll)}" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[2].correctPercentageUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[2].correctPercentageAll)}" />
            </TableRow>

            <!-- Phase 3 -->

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/Three" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[3].timeUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[3].timeAll)}" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[3].correctPercentageUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[3].correctPercentageAll)}" />
            </TableRow>

            <!-- Phase 4 -->
            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/Four" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[4].timeUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/seconds(statisticsFragment.getStatistics()[4].timeAll)}" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="" />


                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[4].correctPercentageUser)}" />

                <TextView
                    style="@style/IconFinder.TableText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@{@string/percent(statisticsFragment.getStatistics()[4].correctPercentageAll)}" />
            </TableRow>

        </TableLayout>


        <TextView
            android:id="@+id/general_statistics"
            style="@style/IconFinder.AppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/back_button"
            style="@style/IconFinder.AppButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</layout>